--- a/index.html
+++ b/index.html
@@ -450,9 +450,9 @@
           <p>If you are interested in my resume please contact me. Thanks!</p>
         </div>
 
-        <div class="row" data-aos="fade-in">
+       <div class="row" data-aos="fade-in">
 
-          <div class="col-lg-9 d-flex align-items-stretch">
+          <div class="col-lg-5 d-flex align-items-stretch">
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
@@ -471,12 +471,10 @@
                 <h4>Call:</h4>
                 <p>+216 25 517 691</p>
               </div>
-
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d5366.551217179067!2d10.182821298579729!3d36.891055289415405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2stn!4v1648251602719!5m2!1sen!2stn" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-            
-
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d5366.551217179067!2d10.182821298579729!3d36.891055289415405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2stn!4v1648251602719!5m2!1sen!2stn" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
+        </div>
 
           <!-- <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
