--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/Dha7kaJetShay.jpg" class="img-fluid" alt="">
+            <img src="assets/img/hamzacafe.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Web developer student.</h3>
@@ -95,7 +95,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>email</strong> <span style="color:blue">hamza.faidi@supcom.tn</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span >hamzafaidi.pacte.live</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+216 25 517 691</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>address</strong> <span>Ghazela, Ariana, Tunisia</span></li>
                 </ul>
@@ -452,7 +452,7 @@
 
         <div class="row" data-aos="fade-in">
 
-          <div class="col-lg-5 d-flex align-items-stretch">
+          <div class="col">
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
@@ -471,46 +471,14 @@
                 <h4>Call:</h4>
                 <p>+216 25 517 691</p>
               </div>
-
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d5366.551217179067!2d10.182821298579729!3d36.891055289415405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2stn!4v1648251602719!5m2!1sen!2stn" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-            
-
           </div>
-
-          <!-- <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="form-group col-md-6">
-                  <label for="name">Your Name</label>
-                  <input type="text" name="name" class="form-control" id="name" required>
-                </div>
-                <div class="form-group col-md-6">
-                  <label for="name">Your Email</label>
-                  <input type="email" class="form-control" name="email" id="email" required>
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="name">Subject</label>
-                <input type="text" class="form-control" name="subject" id="subject" required>
-              </div>
-              <div class="form-group">
-                <label for="name">Message</label>
-                <textarea class="form-control" name="message" rows="10" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
-          </div> -->
-
+          <div class="col">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d5366.551217179067!2d10.182821298579729!3d36.891055289415405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2stn!4v1648251602719!5m2!1sen!2stn" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
         </div>
-
       </div>
-    </section><!-- End Contact Section -->
+    </section>  <!-- End Contact Section -->
 
   </main><!-- End #main -->
 
